--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,8 +1,10 @@
 .button {
   display: block;
+  width: 280px;
+  height: 40px;
   color: $base;
-  padding-top: 14px;
-  padding-bottom: 11px;
+  padding-top: 11px;
+  padding-bottom: 12px;
   background-color: $green;
   text-transform: uppercase;
   text-align: center;
