--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -16,6 +16,7 @@
 }
 
 .contacts__title {
+  margin-top: 26px;
   font-size: 16px;
   line-height: 20px;
   font-weight: 400;
@@ -25,6 +26,7 @@
 }
 
 .contacts__address {
+  margin-top: 26px;
   font-size: 14px;
   line-height: 20px;
   font-family: arial;
