--- a/source/sass/blocks/how-work.scss
+++ b/source/sass/blocks/how-work.scss
@@ -1,6 +1,15 @@
 .how-work {
   padding-left: 20px;
   padding-right: 20px;
+  margin-bottom: 42px;
+}
+
+.how-work__title {
+  margin-top: 0;
+  margin-bottom: 27px;
+  font-size: 36px;
+  line-height: 60px;
+  font-weight: normal;
 }
 
 @media (min-width: 768px) {
