--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -6,6 +6,7 @@
   a {
     color: $black-title;
     font-size: 20px;
+    line-height: 20px;
     font-weight: 500;
     text-transform: uppercase;
   }
@@ -20,8 +21,8 @@
 
   .main-nav__item {
     text-align: center;
-    padding-top: 24px;
-    padding-bottom: 24px;
+    padding-top: 22px;
+    padding-bottom: 22px;
     border-bottom: 1px solid #e6e6e6;
     &:first-child {
       border-top: 1px solid #e6e6e6;
