--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -5,6 +5,10 @@
 
 .programs__item {
   margin-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 25px;
+  padding-bottom: 20px;
 }
 
 @media (min-width: 768px) {
