--- a/source/sass/blocks/training.scss
+++ b/source/sass/blocks/training.scss
@@ -1,43 +1,85 @@
 .training {
   position: relative;
   background-color: $grey;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 25px;
-  padding-bottom: 20px;
+
 }
 
 .training__title {
   margin: 0;
+  margin-top: 5px;
+  margin-bottom: 30px;
+  padding-left: 72px;
   font-size: 24px;
-  line-height: 24px;
+  line-height: 37px;
   font-weight: 400;
   text-transform: uppercase;
   color: $black-title;
 }
 
 .training__logo {
+  position: absolute;
+  top: 24px;
+  left: 22px;
   width: 50px;
+  min-width: 50px;
   height: 50px;
   border-radius: 50%;
   background-color: $green;
   background-repeat: no-repeat;
   background-position: center;
+  &--slim {
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 35px;
+      height: 49px;
+      background-image: url(../img/icon-cat-slim.svg);
+      z-index: 2;
+    }
+  }
+  &--pro {
+    &::before {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: -9px;
+      transform: translate(0, -50%);
+      width: 67px;
+      height: 28px;
+      background-image: url(../img/icon-cat-pro.svg);
+      z-index: 2;
+    }
+  }
 }
 
 .training__description {
   font-family: Arial;
   font-size: 14px;
+  line-height: 18px;
   color: $grey-text;
   text-align: left;
   border-bottom: 1px solid #d9d9d9;
   padding-bottom: 20px;
+  margin: 0;
+  margin-bottom: 20px;
 }
 
 .training__link {
   color: $black-title;
   font-size: 16px;
   text-transform: uppercase;
+  &::before {
+    content: "";
+    width: 25px;
+    height: 12px;
+    position: absolute;
+    bottom: 23px;
+    left: 117px;
+    background-image: url(../img/icon-right-arrow-long.svg);
+  }
 }
 
 @media (min-width: 768px) {
