--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,7 +3,7 @@
 @import "var.scss";
 @import "global.scss";
 @import "mixin.scss";
-@import "blocks/page.scss";
+@import "blocks/container.scss";
 @import "blocks/about-list.scss";
 @import "blocks/add-list.scss";
 @import "blocks/button.scss";
