--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,18 +1,17 @@
 .contacts {
   position: relative;
-}
-
-.contacts__wrap {
-  padding-left: 20px;
-  padding-right: 20px;
-  background-color: #ffffff;
+  background-color: $base;
   &--grey {
     background-color: $grey;
   }
 }
 
 .contacts__text {
+  width: 280px;
   display: flex;
+  z-index: 2;
+  margin: 0 auto;
+  margin-bottom: 10px;
 }
 
 .contacts__title {
@@ -23,6 +22,7 @@
   color: $black-title;
   text-transform: uppercase;
   margin-right: 19px;
+  margin-bottom: 14px;
 }
 
 .contacts__address {
@@ -35,9 +35,9 @@
 
 .contacts__map {
   width: 100%;
-  height:382px;
-
+  height:362px;
   border: 0;
+  z-index: -1;
 }
 
 .contacts__map-nojs {
@@ -50,14 +50,16 @@
 }
 
 @media (min-width: 768px) {
-  .contacts__wrap {
-    padding-left: 30px;
-    padding-right: 30px;
+  .contacts__text {
+    width: 708px;
+    padding-top: 67px;
+    margin: 0 auto;
+    margin-bottom: 55px;
   }
-
   .contacts__title {
     font-size: 20px;
     line-height: 25px;
+    margin: 0;
     margin-right: 300px;
     margin-left: 41px;
   }
@@ -65,18 +67,26 @@
     font-size: 16px;
     line-height: 20px;
     text-align: right;
-    margin-right: 42px; /* не понимаю как сделать пустую строку перед Санкт-Петербург*/
+    margin: 0;
+    margin-right: 42px;
+    span {
+      display: inline-block;
+      margin-top: 20px;
+    }
   }
+
+  .contacts__map {
+    height: 400px;
+  }
+
   .contacts__map-nojs {
-    width: 767px;/*это вообще надо?*/
+    width: 767px;
   }
 }
 
 @media (min-width: 1300px) {
   .contacts__wrap {
     position: relative;
-    padding-left: 40px;
-    padding-right: 40px;
     display: block;
   }
 
@@ -88,7 +98,7 @@
     top: 95px;
     left: 40px;
     justify-content: space-between;
-    padding-top: 69px;
+    padding-top: 65px;
     padding-right: 90px;
     padding-bottom: 62px;
     padding-left: 76px;
@@ -97,9 +107,15 @@
   .contacts__title {
     margin: 0;
     margin-right: 95px;
+    margin-top: 3px;
   }
 
   .contacts__address {
     margin: 0;
+    text-align: left;
+    span {
+      display: inline-block;
+      margin-top: 20px;
+    }
   }
 }
