--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -4,12 +4,11 @@
 }
 
 .form__about-cat {
-  padding-left: 20px;
-  padding-right: 20px;
+  margin-bottom: 8px;
 }
 
 .form__label {
-  margin-right: 15px;
+  margin-right: 12px;
   text-transform: uppercase;
   font-size: 16px;
   line-height: 18px;
@@ -20,14 +19,10 @@
   border: 0;
   margin: 0;
   padding: 0;
-  padding-left: 20px;
-  padding-right: 20px;
 }
 
 .form__target {
   @include clearlist;
-  padding-left: 20px;
-  padding-right: 20px;
   padding-top: 29px;
 }
 
@@ -35,47 +30,50 @@
   border: 0;
   margin: 0;
   padding: 0;
-  padding-left: 20px;
-  padding-right: 20px;
-  label {
-    margin-bottom: 30px;
-  }
+  margin-bottom: 5px;
 }
 
 .form__textarea {
-  margin-left: 20px;
-  margin-right: 20px;
   width: 280px;
+  padding-left: 15px;
+  padding-top: 15px;
+  font-size: 16px;
+  line-height: 18px;
 }
 
 .form__extra {
   border: 0;
   margin: 0;
   padding: 0;
-  padding-left: 20px;
-  padding-right: 20px;
+}
+
+.form__add {
+  margin-top: 40px;
 }
 
 .form__input {
   flex-grow: 1;
   padding: 12px;
-  margin-bottom: 15px;
+  margin-bottom: 14px;
   text-transform: uppercase;
   color: $grey-text;
+  font-size: 16px;
+  line-height: 18px;
 }
 
 .form__title {
-  padding-left: 20px;
-  padding-right: 100px;
-  margin-bottom: 30px;
+  padding-left: 0px;
+  padding-right: 70px;
+  margin-bottom: 35px;
+  margin-top: 27px;
 }
 
 .form__button {
   width: 280px;
-  margin-top: 43px;
-  margin-right: 20px;
+  margin-top: 40px;
   margin-bottom: 23px;
-  margin-left: 20px;
+  font-size: 16px;
+  line-height: 20px;
 }
 
 .form__textarea {
@@ -91,29 +89,89 @@
   text-align: center;
 }
 
+.form__style {
+  position: relative;
+  padding-left: 49px;
+  &--checkbox {
+    &::before {
+      content: "";
+      display: block;
+      position: absolute;
+      left: 0;
+      top: -3px;
+      width: 30px;
+      height: 30px;
+      border: 1px solid #cdcdcd;
+      cursor: pointer;
+    }
+  }
+  &--radio {
+    &::before {
+      content: "";
+      display: block;
+      position: absolute;
+      left: 0;
+      top: -3px;
+      width: 30px;
+      height: 30px;
+      border-radius: 15px;
+      border: 1px solid #cdcdcd;
+      cursor: pointer;
+    }
+  }
+}
+
+.form__checkbox:checked + .form__style {
+  &--checkbox {
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      width: 22px;
+      height: 17px;
+      top: 4px;
+      left: 5px;
+      background-image: url(../img/icon-tick.svg);
+      background-repeat: no-repeat;
+    }
+  }
+}
+
+.form__radio:checked + .form__style {
+  &--radio {
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 6px;
+      left: 9px;
+      width: 12px;
+      height: 12px;
+      border-radius: 6px;
+      background-color: $green;
+    }
+  }
+}
+
 @media (min-width: 768px) {
   .form__title {
     padding-left: 0;
   }
 
   .form__about-cat {
-    padding-left: 70px;
-    padding-right: 70px;
+
   }
 
   .form__target {
-    padding-left: 70px;
-    padding-right: 70px;
+
   }
 
   .form__contacts {
-    padding-left: 70px;
-    padding-right: 70px;
+
   }
 
   .form__comment {
-    padding-left: 70px;
-    padding-right: 70px;
+
   }
 
   .form__textarea {
@@ -125,8 +183,7 @@
   }
 
   .form__extra {
-    padding-left: 70px;
-    padding-right: 70px;
+
   }
 
   .form__label {
@@ -148,8 +205,6 @@
   .form__wrap {
     display: flex;
     align-items: baseline;
-    padding-left: 70px;
-    padding-right: 70px;
   }
 
   .form__button {
@@ -164,41 +219,17 @@
 
   .form__about-cat {
     width: 50%;
-    padding-left: 40px;
-    padding-right: 40px;
     margin-right: 80px;
   }
 
   .form__target {
     width: 50%;
     padding-top: 36px;
-    padding-left: 40px;
-    padding-right: 40px;
     padding-bottom: 33px;
-  }
-
-  .form__contacts {
-    padding-left: 40px;
-    padding-right: 40px;
-  }
-
-  .form__comment {
-    padding-left: 40px;
-    padding-right: 40px;
-  }
-
-  .form__extra {
-    padding-left: 40px;
-    padding-right: 40px;
   }
 
   .form__textarea {
     width: 1220px;
-  }
-
-  .form__wrap {
-    padding-left: 40px;
-    padding-right: 40px;
   }
 
   .form__button {
