--- a/source/sass/blocks/how-work.scss
+++ b/source/sass/blocks/how-work.scss
@@ -1,6 +1,4 @@
 .how-work {
-  padding-left: 20px;
-  padding-right: 20px;
   margin-bottom: 42px;
 }
 
@@ -14,8 +12,9 @@
 
 @media (min-width: 768px) {
   .how-work {
-    padding-left: 30px;
-    padding-right: 30px;
+    padding-top: 46px;
+    border-bottom: 1px solid #e6e6e6;
+    margin-bottom: 0;
   }
 
   .how-work__list {
@@ -24,15 +23,15 @@
   }
 
   .how-work__title {
-    margin-top: 51px;
-    margin-bottom: 63px;
+    margin-bottom: 72px;
+    font-size: 60px;
   }
 }
 
 @media (min-width: 1300px) {
   .how-work {
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-top: 72px;
+    border: 0;
   }
 
   .how-work__list {
