--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -8,14 +8,16 @@
 }
 
 .page-footer__copyright {
-  width: 280px;
-  height: 78px;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   font-family: arial;
   font-size: 16px;
+  line-height: 16px;
   color: #444444;
+  padding-top: 22px;
+  padding-bottom: 22px;
   svg {
     width: 27px;
     height: 34px;
@@ -26,7 +28,7 @@
 }
 
 .page-footer__logo {
-  padding-top: 28px;
+  padding-top: 37px;
   padding-bottom: 31px;
   border-bottom: 1px solid #d9d9d9;
   width: 280px;
@@ -34,12 +36,13 @@
 }
 
 .page-footer__wrapper {
-  height: 62px;
-  width: 280px;
+  width: 100%;
   padding-left: 73px;
+  padding-top: 22px;
+  padding-bottom: 18px;
   border-bottom: 1px solid #d9d9d9;
   display: flex;
-  justify-content: start;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -50,31 +53,25 @@
       flex-direction: row;
       justify-content: space-between;
       align-items: center;
-      padding-left: 30px;
-      padding-right: 30px;
+      padding-top: 55px;
+      padding-bottom: 55px;
     }
   }
 
   .page-footer__logo {
     width: auto;
+    padding: 0;
+    border: 0;
   }
 
   .page-footer__wrapper {
-    width: auto;
     border: 0;
+    padding: 0;
+    width: auto;
   }
 
   .page-footer__copyright {
     width: auto;
     justify-content: center;
-  }
-}
-
-@media (min-width: 1300px) {
-  .page-footer {
-    .container {
-      padding-left: 40px;
-      padding-right: 40px;
-    }
   }
 }
