--- a/source/sass/blocks/production.scss
+++ b/source/sass/blocks/production.scss
@@ -23,10 +23,11 @@
   text-align: center;
   border-bottom: 1px solid #ededed;
   padding-bottom: 24px;
-  padding-left: 20px;
-  padding-right: 20px;
+  &:first-child {
+    border-top: 1px solid #ededed;
+  }
   &:last-child {
-    padding-top: 83px;
+    padding-top: 80px;
     &::before {
       content: "";
       width: 31px;
@@ -43,10 +44,14 @@
 .production__order {
   font-size: 16px;
   line-height: 20px;
+  width: 280px;
+  margin: 0 auto;
 }
 
 .production__card {
   display: flex;
+  width: 280px;
+  margin: 0 auto;
 }
 
 .production__logo {
@@ -79,6 +84,8 @@
 }
 
 .production__more {
+  margin-top: 7px;
+  margin-bottom: 21px;
   font-family: arial;
   font-size: 12px;
   line-height: 16px;
@@ -93,19 +100,34 @@
 
   .production__item {
     width: 324px;
-    padding-top: 165px;
+    padding-top: 163px;
     padding-left: 38px;
     padding-right: 38px;
     padding-bottom: 40px;
     background-color: $grey;
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 140px;
     border: 0;
+    &:first-child {
+      border-top: none;
+    }
+
+    &:nth-child(odd) {
+      margin-left: auto;
+      margin-right: 30px;
+    }
+
+    &:nth-child(even) {
+      margin-right: auto;
+      margin-left: 30px;
+    }
+
     &:last-child {
       background-color: $base;
       border: 1px solid #ededed;
       margin-bottom: 0;
+      padding-top: 163px;
     }
     &:nth-last-child(2) {
       margin-bottom: 0;
@@ -116,13 +138,14 @@
     position: relative;
     flex-direction: column;
     align-items: center;
+    width: auto;
   }
 
   .production__title {
     margin: 0;
     margin-bottom: 17px;
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 55px;
+    padding-right: 55px;
     font-size: 20px;
     line-height: 20px;
     text-align: center;
@@ -131,7 +154,7 @@
   .production__logo {
     position: absolute;
     left: center;
-    top: -100px;
+    top: -150px;
   }
 
   .production__text {
@@ -142,16 +165,21 @@
     width: 100%;
     font-size: 16px;
     line-height: 16px;
-    padding-bottom: 33px;
+    padding-bottom: 32px;
     td {
       border-bottom: 1px solid #cdcdcd;
-      padding-bottom: 10px;
-      padding-top: 10px;
+      padding-bottom: 7px;
+      padding-top: 9px;
     }
   }
 
+  .production__order {
+    width: auto;
+  }
+
   .production__more {
-    margin-bottom: 100px;
+    margin-top: 27px;
+    margin-bottom: 88px;
     font-size: 16px;
     padding-left: 30px;
     padding-right: 30px;
@@ -161,15 +189,36 @@
 @media (min-width: 1300px) {
   .production__item {
     width: 245px;
-    margin-right: 40px;
-    margin-left: 40px;
+    margin-right: 80px;
+    margin-bottom: 142px;
+    &:nth-child(odd) {
+      margin-left: 0;
+      margin-right: 80px;
+    }
+
+    &:nth-child(even) {
+      margin-right: 80px;
+      margin-left: 0;
+    }
     &:nth-child(n+5) {
       margin-bottom: 0;
-      }
+    }
+
+    &:nth-child(4n) {
+      margin-right: auto;
+    }
+
+    &:nth-child(4n+1) {
+      margin-left: auto;
+    }
   }
 
   .production__title {
     padding-left: 10px;
     padding-right: 10px;
+  }
+
+  .production__more {
+    padding: 0;
   }
 }
