--- a/source/sass/blocks/status-bar.scss
+++ b/source/sass/blocks/status-bar.scss
@@ -38,7 +38,7 @@
 
 @media (min-width: 768px) {
   .status-bar__condition {
-    border-bottom: 1px dotted #eaeaea;
+    border-bottom: 1px dotted #b8b8b8;
   }
 
   .status-bar__line-wrap {
