--- a/source/sass/blocks/more-goods.scss
+++ b/source/sass/blocks/more-goods.scss
@@ -190,19 +190,31 @@
 
 @media (min-width: 1300px) {
   .more-goods {
-    display: flex;
-    flex-wrap: wrap;
     margin-top: 75px;
   }
 
   .more-goods__title {
     border: 0;
-    width: 100%;
+  }
+
+  .more-goods__title-hr {
+    padding-left: 0;
+    &::before {
+      display: block;
+      width: 38px;
+      left: -38px;
+    }
+  }
+
+  .more-goods__wrapper {
+    display: flex;
+    justify-content: space-between;
   }
 
   .more-goods__list {
     border: 0;
     width: 895px;
+    margin: 0;
   }
 
   .more-goods__item{
@@ -243,8 +255,6 @@
     height: 289px;
 
     margin: 0;
-    margin-left: auto;
-    margin-right: auto;
     margin-bottom: 86px;
     background-image: url(../img/icon-gift.svg),
       url(../img/gift-photo-desktop@1x.jpg);
