--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -134,14 +134,16 @@
   }
 
   .page-main__banner-desktop {
+    width: 50%;
     position: absolute;
     top: -115px;
     left: 50%;
     z-index: -1;
-    width: 720px;
     height: 696px;
-    background-color: $green;
+    background-color: #64a83b;
     background-image: url(../img/index-background-desktop@1x.jpg);
+    background-position: 0 0;
+    background-repeat: no-repeat;
   }
 
   .page-main__title {
@@ -150,9 +152,8 @@
     padding-right: 700px;
     z-index: 2;
     &--catalog {
-      margin-right: 0;
-      margin-left: 40px;
-      margin-top: 73px;
+      margin-left: auto;
+      margin-right: auto;
       padding: 0;
     }
   }
