--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -9,9 +9,21 @@
   text-transform: uppercase;
   text-align: center;
   border: 0;
+  &:hover {
+    background-color: $green-hvr;
+  }
+  &:active {
+    color: rgba($base,0.3);
+  }
   &--grey {
     background-color: $grey;
     color: $grey-text;
+    &:hover {
+      background-color: #ebebeb;
+    }
+    &:active {
+    color: rgba($grey-text,0.3);
+  }
   }
 }
 
