--- a/source/sass/blocks/add-list.scss
+++ b/source/sass/blocks/add-list.scss
@@ -15,10 +15,14 @@
   .add-list {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
   }
 
   .add-list__item {
-    width: 50%;
+    width: 283px;
+    &:first-child {
+      margin-bottom: 50px;
+    }
   }
 }
 
@@ -28,6 +32,13 @@
   }
 
   .add-list__item {
-    width: 25%;
+    width: 245px;
+    margin-right: 80px;
+    &:last-child {
+      margin-right: 0;
+    }
+    &:first-child {
+      margin-bottom: 32px;
+    }
   }
 }
