--- a/source/sass/blocks/index-list.scss
+++ b/source/sass/blocks/index-list.scss
@@ -76,6 +76,10 @@
 }
 
 @media (min-width: 1300px) {
+  .index-list{
+    margin-bottom: 25px;
+  }
+
   .index-list__title {
     background-color: $grey;
   }
