--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -22,6 +22,7 @@
 
 .page-main__title {
   margin: 0 auto;
+  margin-bottom: 25px;
   padding-top: 28px;
   font-size: 36px;
   line-height: 60px;
@@ -34,7 +35,7 @@
   &--catalog {
     padding: 0;
     margin-top: 16px;
-    padding-bottom: 28px;
+    margin-bottom: 27px;
   }
 
   &--programs {
@@ -92,7 +93,9 @@
       padding: 0;
     }
     &--programs {
-      margin-bottom: 53px;
+      margin-bottom: 57px;
+      padding-left: 0;
+      padding-top: 35px;
     }
   }
 
@@ -121,8 +124,9 @@
     margin-bottom: 48px;
     &--programs {
       padding-left: 40px;
-      padding-right: 350px;
+      padding-right: 320px;
       line-height: 30px;
+      margin-bottom: 62px;
     }
   }
 }
@@ -154,7 +158,12 @@
     &--catalog {
       margin-left: auto;
       margin-right: auto;
+      margin-top: 73px;
       padding: 0;
+    }
+    &--programs {
+      padding: 0;
+      margin-top: 73px;
     }
   }
 
@@ -165,6 +174,7 @@
     padding-left: 80px;
     &--programs {
       margin-left: 0;
+      margin-bottom: 63px;
       padding-left: 0;
       padding-right: 850px;
     }
