--- a/source/sass/blocks/social-list.scss
+++ b/source/sass/blocks/social-list.scss
@@ -1,12 +1,16 @@
 .social-list {
   @include clearlist;
-
   display: flex;
+  align-items: center;
 }
 
 .social-list__item {
-  margin-right: 36px;
+  margin-right: 29px;
   &:last-child {
     margin-right: 0;
   }
+}
+
+@media (min-width: 768px) {
+
 }
