--- a/source/sass/blocks/status-bar.scss
+++ b/source/sass/blocks/status-bar.scss
@@ -38,7 +38,16 @@
 
 @media (min-width: 768px) {
   .status-bar__condition {
-    border-bottom: 1px dotted #b8b8b8;
+    padding-bottom: 6px;
+    border-bottom: 1px dotted #bebebe;
+    font-size: 20px;
+    line-height: 20px;
+    &:hover {
+      border-bottom: 1px solid #989898;
+    }
+    &:active {
+      border-bottom: none;
+    }
   }
 
   .status-bar__line-wrap {
@@ -61,6 +70,8 @@
     background-color: $base;
     border: 1px solid #cdcdcd;
     border-radius: 50%;
+    box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.15);
+    cursor: pointer;
     &::before {
       display: block;
       content: "";
@@ -72,6 +83,13 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
+    }
+    &:hover {
+      box-shadow: 0px 3px 5px 0 rgba(0, 0, 0, 0.25);
+    }
+    &:active {
+      box-shadow: 0px 4px 5px 0 rgba(0, 0, 0, 0.3);
+      border: 2px solid $green;
     }
   }
 }
