--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,8 +3,9 @@
 @import "var.scss";
 @import "global.scss";
 @import "mixin.scss";
-@import "blocks/container.scss";
 @import "blocks/title.scss";
+@import "blocks/hr.scss";
+@import "blocks/container.scss";
 @import "blocks/about-list.scss";
 @import "blocks/add-list.scss";
 @import "blocks/button.scss";
